# devboxes

./: .editorconfig  .gitignore  .markdownlint-cli2.jsonc  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.md  Makefile  NOTICE  PRODUCT.md  README.md  SECURITY.md  SUPPORT.md  eslint.config.js  package-lock.json  package.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
charts/devboxes/: Chart.yaml  values.schema.json  values.yaml
charts/devboxes/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  ingress.yaml  insights-pvc.yaml  pdb.yaml  rbac.yaml  service.yaml  serviceaccounts.yaml  servicemonitor.yaml
cli/: Cargo.toml  README.md
cli/src/: client.rs  config.rs  login.rs  main.rs  models.rs
controller/: .dockerignore  Dockerfile  README.md  pyproject.toml
controller/src/devboxes_controller/: __init__.py  app.py  auth.py  config.py  insights_privacy.py  insights_service.py  insights_store.py  manager.py  models.py  resources.py
controller/src/devboxes_controller/static/: app.js  docs.js  insights.js  styles.css
controller/src/devboxes_controller/templates/: cli_authorize.html  docs.html  index.html  insights.html  login.html
controller/tests/: __init__.py  fakes.py  preview_app.py  test_app.py  test_auth.py  test_config.py  test_insights_app.py  test_insights_privacy.py  test_insights_service.py  test_insights_store.py  test_manager.py  test_models.py  test_resources.py  test_workspace_insights_agent.py
controller/tests/fixtures/: claude-2.1.205-otlp.json  codex-0.144.0-otlp.json
docs/: api.md  architecture.md  cli.md  configuration.md  credentials.md  development.md  golden-path.md  gpu.md  images.md  index.md  insights.md  operations.md  troubleshooting.md
scripts/: bootstrap-secrets.sh  check-docs.mjs  check-version.sh  install-devbox-cli.sh  install.sh  kind-e2e.sh  published-e2e.sh  test-helm-gpu.sh  test-helm-images.sh  test-helm-insights.sh  verify-install.sh  verify-published-images.sh
scripts/fixtures/custom-image/: Dockerfile
workspace/: Dockerfile  bashrc  codex-insights.toml  devbox-secrets.sh  devbox-shell  entrypoint.sh  insights_agent.py  sshd_config  tmux.conf  zshrc
workspace/terminfo/: README.md
workspace/tests/: test-devbox-shell.sh  test-image-terminal.sh
