[project]
name = "devboxes-controller"
version = "0.1.0"
description = "Controller and dashboard for self-hosted Kubernetes development environments"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "kubernetes>=35,<37",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
  "urllib3>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "mypy>=1.17,<2",
  "pip-audit>=2.10,<3",
  "pytest>=8.4,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
devboxes-controller = "devboxes_controller.app:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devboxes_controller"]

[tool.hatch.build]
include = [
  "src/devboxes_controller/**/*.py",
  "src/devboxes_controller/py.typed",
  "src/devboxes_controller/static/*",
  "src/devboxes_controller/templates/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "S", "SIM", "RUF"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S105", "S106"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
packages = ["devboxes_controller"]

[tool.pytest.ini_options]
addopts = "-q --cov=devboxes_controller --cov-report=term-missing"
testpaths = ["tests"]
