[project]
name = "devboxes-controller"
version = "0.5.0"
description = "Controller and dashboard for self-hosted Kubernetes development environments"
readme = "README.md"
requires-python = ">=3.12"
license = "Apache-2.0"
keywords = ["development-environments", "fastapi", "kubernetes", "ssh"]
dependencies = [
  "fastapi>=0.116,<1",
  "jinja2>=3.1,<4",
  "kubernetes>=35,<37",
  "prometheus-client>=0.22,<1",
  "pydantic-settings>=2.10,<3",
  "pyjwt>=2.10,<3",
  "python-multipart>=0.0.20,<1",
  "uvicorn[standard]>=0.35,<1",
  "urllib3>=2.7,<3",
]

[project.optional-dependencies]
dev = [
  "httpx2>=2,<3",
  "mypy>=1.17,<2",
  "pip-audit>=2.10,<3",
  "pytest>=9.0.3,<10",
  "pytest-cov>=6.2,<7",
  "ruff>=0.12,<1",
]

[project.scripts]
devboxes-controller = "devboxes_controller.app:main"

[project.urls]
Changelog = "https://github.com/vicotrbb/devboxes/blob/main/CHANGELOG.md"
Documentation = "https://github.com/vicotrbb/devboxes/blob/main/docs/index.md"
Issues = "https://github.com/vicotrbb/devboxes/issues"
Repository = "https://github.com/vicotrbb/devboxes"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/devboxes_controller"]

[tool.hatch.build]
include = [
  "src/devboxes_controller/**/*.py",
  "src/devboxes_controller/py.typed",
  "src/devboxes_controller/static/*",
  "src/devboxes_controller/templates/*",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
  "ASYNC",
  "B",
  "C4",
  "D",
  "DTZ",
  "E",
  "F",
  "FAST",
  "I",
  "LOG",
  "N",
  "PERF",
  "PIE",
  "RET",
  "RUF",
  "S",
  "SIM",
  "UP",
]
ignore = ["D107", "D203", "D213"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "S101", "S105", "S106"]
# Query fragments in this module are selected from fixed internal constants and
# all request values remain bound parameters. "token_type" is a metric category.
"src/devboxes_controller/insights_store.py" = ["S105", "S608"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
packages = ["devboxes_controller"]

[tool.pytest.ini_options]
addopts = "-q --cov=devboxes_controller --cov-report=term-missing --cov-fail-under=85"
testpaths = ["tests"]
